# nacl_sdd

./: .gitignore  README.md  pyproject.toml
common/: RawBoost.py  dataset.py  utils.py
common/eval/: evaluate_in_the_wild.py  main.py
configs/: accelerate_config_multi_gpu.yaml  accelerate_config_single_gpu.yaml
configs/XLSR_Conformer/: base_DF.yaml  base_LA.yaml
configs/XLSR_Conformer_CL/: base_DF.yaml  base_LA.yaml
configs/XLSR_Conformer_CL_DT/: base_DF.yaml  base_LA.yaml
configs/XLSR_Conformer_DT/: base_DF.yaml  base_LA.yaml
datasets/keys/ITW/: meta.csv
datasets/protocols/: in_the_wild.eval.txt
datasets/utmos/: ASVspoof2019_train.txt
models/XLSR_Conformer/: evaluate.py  evaluate_itw.py  train.py
models/XLSR_Conformer_CL/: dataset.py  model.py  train.py
models/XLSR_Conformer_CL_DT/: dataset.py  train.py
models/XLSR_Conformer_DT/: dataset.py  model.py  train.py
scripts/: evaluate.sh  evaluate_itw.sh  evaluate_pretrained.sh  evaluate_pretrained_itw.sh  train.sh
